# music-rs

./: Cargo.toml  README.md
examples/projects/: happy_birthday.json  smells_like_teen_spirit_snippet.json
examples/projects/happy_birthday/: project.json
examples/projects/happy_birthday/tracks/: 000_birthday_lead.json  001_chords.json  002_bass.json  003_drums.json
src/: ai.rs  app.rs  audio.rs  commands.rs  control.rs  lib.rs  main.rs  midi_import.rs  project.rs  project_io.rs  render.rs  undo.rs
tests/: acceptance.rs
