[package]
name = "music-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "daw"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
cpal = "0.17.3"
dirs = "6.0.0"
eframe = "0.34.1"
egui = "0.34.1"
hound = "3.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tungstenite = "0.29.0"
uuid = { version = "1.23.1", features = ["v4"] }
